Git Deployment Assignment/force-app/main/default/objects/Employee__c/fields/Skillset__c.field-meta.xml
<CustomField>
    <fullName>Skillset__c</fullName>
    <description>skills..</description>
    <inlineHelpText>Enter the skills you have...</inlineHelpText>
    <label>Skillset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>