Git Deployment Assignment/force-app/main/default/objects/Employee__c/fields/Stipend__c.field-meta.xml
<CustomField>
    <fullName>Stipend__c</fullName>
    <label>Stipend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>