Git Deployment Assignment/force-app/main/default/objects/Employee__c/recordTypes/Experience.recordType-meta.xml
<RecordType>
    <fullName>Experience</fullName>
    <active>true</active>
    <label>Experience</label>
</RecordType>