Git Deployment Assignment/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>College__c</columns>
    <columns>DOB__c</columns>
    <columns>Salary__c</columns>
    <columns>Skillset__c</columns>
    <columns>Stipend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>